<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HomeFragment">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_height"
                app:cardCornerRadius="@dimen/banner_radius"
                app:cardElevation="0dp"
                android:layout_margin="@dimen/material_layout_vertical_spacing_between_content_areas"
                android:clickable="true">

                <com.youth.banner.Banner
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                </com.youth.banner.Banner>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/banner_radius"
                android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
                app:cardElevation="0dp"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/material_component_bottom_sheet_edge_left_right_margins">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_alignParentStart="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/booking"
                            android:textSize="@dimen/material_typography_subheading"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/all_booking_movie"
                            android:layout_alignParentEnd="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/material_typography_button" />

                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:layout_marginTop="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
                        android:id="@+id/home_booking_movie_rec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/banner_radius"
                android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
                app:cardElevation="0dp"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/material_component_bottom_sheet_edge_left_right_margins">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_alignParentStart="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/showing"
                            android:textSize="@dimen/material_typography_subheading"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/all_showing_movie"
                            android:layout_alignParentEnd="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/material_typography_button" />

                    </RelativeLayout>


                    <android.support.v7.widget.RecyclerView
                        android:layout_marginTop="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
                        android:id="@+id/home_showing_movie_rec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/banner_radius"
                android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
                app:cardElevation="0dp"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/material_component_bottom_sheet_edge_left_right_margins">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_alignParentStart="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/coming"
                            android:textSize="@dimen/material_typography_subheading"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/all_coming_movie"
                            android:layout_alignParentEnd="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/material_typography_button" />

                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:layout_marginTop="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
                        android:id="@+id/home_coming_movie_rec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



</android.support.v4.widget.SwipeRefreshLayout>