<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MovieDetailActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/movie_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/movie_appbarlayout"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:layout_height="250dp">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/movie_colltoolbar"
                app:titleEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleGravity="center"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentScrim="@color/primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:id="@+id/movie_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true" />

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginStart="20dp"
                    app:layout_collapseMode="parallax"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    android:transitionName="movie_poster"/>

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icons"
                    android:textSize="@dimen/material_typography_title"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="80dp" />

                <TextView
                    android:id="@+id/movie_eng_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/transfont"
                    android:textSize="@dimen/material_typography_body1"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="105dp" />

                <TextView
                    android:id="@+id/movie_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/transfont"
                    android:textSize="@dimen/material_typography_caption"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="135dp" />

                <TextView
                    android:id="@+id/movie_release_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/transfont"
                    android:textSize="@dimen/material_typography_caption"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="155dp" />

                <TextView
                    android:id="@+id/movie_release_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/transfont"
                    android:textSize="@dimen/material_typography_caption"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="175dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="200dp">

                    <TextView
                        android:id="@+id/movie_wanted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/score"
                        android:textSize="@dimen/material_typography_subheading" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="人想看"
                        android:textColor="@color/transfont"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="3dp"
                        android:textSize="@dimen/material_typography_caption" />
                </LinearLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/movie_toolbar"
                    android:layout_width="match_parent"
                    app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
                    android:layout_height="@dimen/material_layout_app_bar_height"
                    app:contentInsetStart="0dp"
                    app:layout_collapseMode="pin">

                    <TextView
                        android:id="@+id/movie_coll_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:textAlignment="center"
                        android:textColor="@color/icons"
                        android:layout_gravity="center"/>

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="-8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <android.support.v4.widget.NestedScrollView
                android:id="@+id/movie_detail_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
                android:layout_marginRight="@dimen/material_component_bottom_sheet_edge_top_bottom_margins">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.ms.square.android.expandabletextview.ExpandableTextView
                        android:id="@+id/movie_expand_sum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:maxCollapsedLines="3"
                        app:animDuration="200">

                        <TextView
                            android:id="@id/expandable_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:textSize="@dimen/material_typography_caption"
                            android:textColor="@color/primary_text" />
                        <ImageButton
                            android:id="@id/expand_collapse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@android:color/transparent"/>
                    </com.ms.square.android.expandabletextview.ExpandableTextView>

                    <View
                        android:layout_margin="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
                        android:background="@color/transfont"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="@dimen/material_component_bottom_sheet_edge_left_right_margins">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_alignParentStart="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/actors"
                                android:textSize="@dimen/material_typography_subheading"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/all_actors"
                                android:layout_alignParentEnd="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/material_typography_button" />

                        </RelativeLayout>

                        <android.support.v7.widget.RecyclerView
                            android:layout_marginTop="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
                            android:id="@+id/movie_actors_rec"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="true">

                        </android.support.v7.widget.RecyclerView>

                    </LinearLayout>

                    <View
                        android:layout_margin="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
                        android:background="@color/transfont"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="@dimen/material_component_bottom_sheet_edge_left_right_margins">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_alignParentStart="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/videoandpic"
                                android:textSize="@dimen/material_typography_subheading"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/all_stage_pic"
                                android:layout_alignParentEnd="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/material_typography_button" />

                        </RelativeLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/movie_image_rec"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
                            android:nestedScrollingEnabled="true">


                        </android.support.v7.widget.RecyclerView>

                    </LinearLayout>

                    <View
                        android:layout_margin="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
                        android:background="@color/transfont"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="@dimen/material_component_bottom_sheet_edge_left_right_margins">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_alignParentStart="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/comments"
                                android:textSize="@dimen/material_typography_subheading"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/all_comments"
                                android:layout_alignParentEnd="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/material_typography_button" />

                        </RelativeLayout>

                        <android.support.v7.widget.RecyclerView
                            android:layout_marginTop="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
                            android:id="@+id/movie_comments_rec"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false">
                        </android.support.v7.widget.RecyclerView>

                    </LinearLayout>
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_pay"
            android:layout_width="@dimen/material_component_floating_action_button_size"
            android:layout_height="@dimen/material_component_floating_action_button_size"
            android:src="@drawable/ic_shopping_cart_white_24dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/material_component_floating_action_button_margin"/>
    </android.support.design.widget.CoordinatorLayout>



</android.support.v4.widget.SwipeRefreshLayout>